--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -264,10 +264,10 @@
 
     & .cont-text { background: linear-gradient(160deg, var(--bg-sm-white) 0%, var(--bg-white) 30%); }
     
-    & .cont-skill { 
-        z-index: 101; 
-        right: 0;
-        bottom: 0 !important;
+    & .cont-links { 
+        z-index: 100 !important; 
+        right: 0px !important;
+        bottom: 0px !important;
     }
 }
 
