--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,5 +1,54 @@
 .cont-card { display: flex; }
 
+.cardAds {
+    position: fixed;
+    top: 90px;
+    right: 20px;
+    border-radius: var(--radius-card);
+    backdrop-filter: blur(20px);
+    z-index: 1000;
+    background-color: var(--bg-sm-white);
+    display: flex;
+    gap: 10px;
+    padding: 8px;
+    padding-right: 25px;
+
+    svg {
+        position: relative;
+        top: -20px;
+        right: -15px;
+        width: 14px;
+        transform: rotate(-90deg);
+        color: var(--font-black);
+    }
+
+    img {
+        width: 60px;
+        background-color: #26262ba5;
+        border-radius: 8px;
+        padding: 5px;
+    }
+
+    div {
+        display: grid;
+
+        h3 {
+            color: var(--font-black);
+            font-weight: 600;
+            font-size: 13px;
+        }
+    
+        h5 {
+            max-width: 25ch;
+            color: var(--font-sm-black);
+            font-weight: 600;
+            font-size: 13px;
+            line-height: 18px;
+        }
+    }
+
+}
+
 .card {
     padding: 20px;
     display: flex;
@@ -10,28 +59,25 @@
     border-radius: 20px;
     outline: 1px solid var(--border-white);
 
-    & .title {
+    .title {
         font-size: 18px;
         color: var(--font-black);
         display: flex;
         align-items: center;
         gap: 12px;
         text-transform: uppercase;
-        font-family: "Chakra Petch", serif;
 
-        & .raimbow {
+        .raimbow {
             display: grid;
             place-items: center;
             padding: 2px;
-            border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-            background-color: var(--font-sm-black);
+            border-radius: var(--radius-card);
+            background-color: var(--border-sm-white);
 
             & svg { 
-                width: 30px;
+                width: 32px;
                 padding: 6px;
-                border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
                 color: var(--font-black);
-                background-color: var(--bg-white);  
             }
         }
     }
@@ -43,109 +89,10 @@
     }
 }
 
-.audio-cont {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-    margin-bottom: 80px;
-}
-
-.cardAudio {
-    width: 100%;
-    background-color: var(--bg-mm-white);
-    border-radius: 20px;
-    overflow: hidden;
-    display: flex;
-    position: relative;
-    align-items: center;
-    gap: 10px;
-    padding-right: 15px;
-    border: 1px solid var(--border-white);
-    background: linear-gradient(160deg, var(--bg-white) 30%, var(--bg-white) 70%, var(--border-white) 100%);
-
-    & img { 
-        width: 120px;
-        -webkit-mask-image: linear-gradient(To right, var(--bg-white), transparent);
-        mask-image: linear-gradient(To right, var(--bg-white), transparent);
-    }
-
-    & .row {
-        display: grid;
-        gap: 5px;
-
-        & h4 {
-            color: var(--font-black);
-            font-weight: 500;
-            font-size: 14px;
-        }
-        
-        & h6 { color: var(--font-sm-black); font-size: 13px; }
-
-        input[type="range"] {
-            -webkit-appearance: none;
-            appearance: none;
-            width: 100%;
-            height: 5px;
-            background: var(--border-sm-white);
-            border-radius: 4px;
-            outline: none;
-            cursor: pointer;
-            margin-top: 10px;
-        } 
-
-        input[type="range"]::-webkit-slider-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-          
-        input[type="range"]::-moz-range-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-          
-        input[type="range"]::-ms-thumb {
-            -webkit-appearance: none;
-            height: 13px;
-            width: 13px;
-            border-radius: 50%;
-            background-color: var(--bg-purple-dark);
-            border: 2px solid var(--bg-purple);
-            backdrop-filter: blur(10px);
-        }
-    }
-
-    & .play {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        display: grid;
-        place-items: center;
-        background-color: var(--border-white);
-        border-radius: 13px;
-        padding: 6px;
-        background:var(--border-white);
-        border: 1px solid var(--border-sm-white);
-
-        & svg { width: 20px; color: var(--font-black); }
-    }
-}
-
-.bubble {
-    animation: morph 4s infinite ease-in-out;
-}
+.bubble { animation: morph 4s infinite ease-in-out; }
 
 .projects, .extras {
-    & .cardProject {
+    .cardProject {
         width: 100%;
         background-color: var(--bg-white);
         position: relative;
@@ -168,28 +115,25 @@
             gap: 15px; 
             background: linear-gradient(160deg, var(--border-white) 0%, var(--bg-white) 30%, var(--bg-white) 100%);
 
-            & .title {
+            .title {
                 display: flex;
                 align-items: center;
                 gap: 12px;
                 color: var(--font-black);
                 font-size: 18px;
                 text-transform: uppercase;
-                font-family: "Chakra Petch", serif;
 
-                & .raimbow {
+                .raimbow {
                     display: grid;
                     place-items: center;
                     padding: 2px;
-                    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-                    background-color: var(--bg-purple);
+                    border-radius: var(--radius-card);
+                    background-color: var(--border-sm-white);
         
                     & svg { 
-                        width: 30px;
+                        width: 32px;
                         padding: 6px;
-                        border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
                         color: var(--font-black);
-                        background-color: var(--bg-white);  
                     }
                 }
             }
