--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --bg-white: #000;
-    --bg-sm-white: #070707;
+    --bg-sm-white: #161619a5;
     --bg-mm-white: #090909;
 
     --border-white: #101010;
@@ -13,10 +14,9 @@
     --font-sm-black: #7f7f85;
     --font-mm-black: #20242b;
 
-    --bg-purple: #afffe4;
-    --bg-purple-dark: #afffe412;
+    --bg-purple: #ffe3af;
 
-    --radius-card: 10px;
+    --radius-card: 8px;
 }
 
 * {
@@ -28,20 +28,18 @@
     font-family: "Inter", serif;
     scroll-behavior: smooth;
     scrollbar-width: thin;
-    scrollbar-color: var(--bg-white) transparent !important;
+    scrollbar-color: var(--border-white) var(--bg-mm-white) !important;
 }
 
 body {
     background-color: var(--bg-white);
     overflow-x: hidden;
-    scroll-behavior: smooth;
-    scrollbar-width: thin;
 }
 
 p { line-height: 24px; }
 
 .container-home {
-    padding: 20px 20px;
+    padding: 20px 20px 0 20px;
     overflow: hidden;
 }
 
@@ -51,28 +49,6 @@ p { line-height: 24px; }
     grid-template-columns: 1fr 1fr;
     gap: 15px;
     position: relative;
-}
-
-.blur1 {
-    position: absolute;
-    top: -650px;
-    right: -700px;
-    width: 100%;
-    z-index: -1;
-    filter: blur(30px);
-
-    & img { width: 1900px; }
-}
-
-.blur2 {
-    position: absolute;
-    bottom: -330px;
-    left: -400px;
-    width: 100%;
-    z-index: -1;
-    filter: blur(30px);
-
-    & img { width: 800px; }
 }
 
 footer {
@@ -106,10 +82,6 @@ footer {
 
     & .cont-line {
         & div { background: linear-gradient(To bottom, transparent, var(--border-sm-white), transparent); }
-    }
-
-    & .letter {  
-        & span { font-size: clamp(100px, 50vw, 200px); }
     }
 
     & .blur1 {
@@ -151,8 +123,8 @@ footer {
 
 .btn-float {
     padding: 8px 15px;
-    border: 1px solid var(--border-white);
-    border-radius: 15px;
+    border: 1px solid var(--border-sm-white);
+    border-radius: 20px;
     display: grid;
     place-content: center;
     background: linear-gradient(150deg, var(--border-sm-white) 0%, var(--bg-white) 40%);
@@ -204,12 +176,11 @@ footer {
 
 .float-icon-left, .float-icon-right {
     position: absolute;
-    top: -20px;
-    backdrop-filter: blur(10px);
-    border: 2px solid var(--bg-purple);
+    backdrop-filter: blur(5px);
+    border: 2px solid var(--border-white);
     padding: 10px;
     border-radius: 20px;
-    background: linear-gradient(160deg, var(--bg-purple-dark) 0%, var(--bg-white) 50%);
+    background-color: #00000013;
     z-index: 100;
 
     &::before {
@@ -217,13 +188,10 @@ footer {
         content: '';
         width: 30px;
         height: 30px;
-        top: 10px;
-        left: -20px;
         border-radius: 8px;
         border: 2px solid var(--border-white);
-        background-color: #000000a0;
+        background-color: #000000cf;
         backdrop-filter: blur(5px);
-        box-shadow: 10px 10px 10px var(--bg-white);
         animation: floatOne infinite linear 3s;
     }
 
@@ -232,18 +200,16 @@ footer {
         content: '';
         width: 40px;
         height: 40px;
-        top: -30px;
-        right: -20px;
         border-radius: 10px;
         border: 2px solid var(--border-white);
-        background-color: #000000a0;
+        background-color: #000000cf;
         backdrop-filter: blur(5px);
         animation: floatTwo infinite linear 2s;
     }
     
     & svg {
         width: 50px;
-        color: var(--bg-purple);
+        color: var(--font-sm-black);
     }
 }
 
@@ -251,6 +217,16 @@ footer {
     top: -30px;
     left: -30px;
     transform: rotate(-5deg);
+
+    &::before {
+        top: 10px;
+        right: -20px;
+    }
+
+    &::after {
+        top: -30px;
+        left: -20px;
+    }
 }
 
 .float-icon-right {
@@ -265,12 +241,7 @@ footer {
 
     &::after {
         top: -30px;
-        right: -20px;
-    }
-    
-    & svg {
-        width: 50px;
-        color: var(--bg-purple);
+        right: -20px !important;
     }
 }
 
